--- a/Scanner/Info.plist
+++ b/Scanner/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>사진 앫범 사용권한</string>
+	<string>사진을 앨범에 추가하기 위해서는 앨범의 접근 권한이 필요합니다.</string>
 	<key>NSCameraUsageDescription</key>
-	<string>카메라 사용권한</string>
+	<string>카메라를 이용하여 사진을 찍기 위해 카메라 접근 권한이 필요합니다</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
